--- a/Case.ipynb
+++ b/Case.ipynb
@@ -125,7 +125,8 @@
     "import pandas as pd\n",
     "import time\n",
     "from datetime import date\n",
-    "  \n",
+    "\n",
+    "# Links de API  \n",
     "urls = ['https://infinit-mock-bi-735qakww5q-rj.a.run.app/vendas', \n",
     "        'https://infinit-mock-bi-735qakww5q-rj.a.run.app/contas', \n",
     "        'https://infinit-mock-bi-735qakww5q-rj.a.run.app/conciliacao']\n",
