--- a/Case.ipynb
+++ b/Case.ipynb
@@ -126,7 +126,7 @@
     "import time\n",
     "from datetime import date\n",
     "\n",
-    "# Links de API  \n",
+    "# Links de API   \n",
     "urls = ['https://infinit-mock-bi-735qakww5q-rj.a.run.app/vendas', \n",
     "        'https://infinit-mock-bi-735qakww5q-rj.a.run.app/contas', \n",
     "        'https://infinit-mock-bi-735qakww5q-rj.a.run.app/conciliacao']\n",
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
