--- a/Case.ipynb
+++ b/Case.ipynb
@@ -36,8 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Trecho realizado através de um companheiro, não realizado por mim\n",
-     #Carregando dados de vendas, conciliação e contas a receber\n",
+    "#Trecho realizado através de um companheiro, não realizado por mim: Carregando dados de vendas, conciliação e contas a receber\n",
     "vendas_df = pd.read_csv('vendas.csv')\n",
     "conciliacao_df = pd.read_csv('conciliacao.csv')\n",
     "contas_receber_df = pd.read_csv('contas.csv',sep=',')\n",
